# DistributedTrainingBQML

./: Dockerfile  Dockerfile.model_training  README.md  pipeline.py  pyproject.toml  requirement.txt
containers/base/: Dockerfile
containers/etl/: entrypoint.sh
containers/prediction/: Dockerfile  entrypoint.sh
containers/training/: Dockerfile  entrypoint.sh
etl_component/: Dockerfile  data_preparation.py  etl.py
evaluate_models_component/: Dockerfile
pipelines/vertex/: training_pipeline.py
pipelines/vertex/component/: etl_component.py  prediction_component.py  training_component.py
scripts/: build_containers.sh
src/fraud/training/: main.py  registry.py
train_bqml/: Dockerfile  model_train.py  train.py
